Defect: add sample description

--- a/skeleton/parser.cabal
+++ b/skeleton/parser.cabal
@@ -1,6 +1,6 @@
 Name:                Parser
 Version:             0.0.1
-Description:         Practicing parsing a binary expression calculator
+Description:         TODO Modify this description
 License:             BSD3
 License-file:        LICENSE
 Build-Type:          Simple
