Install the grammar program automatically

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -10,11 +10,16 @@ clean:
 	rm -f *.java *.tokens *.class
 	cabal clean
 
+grammarinstall:
+	export CLASSPATH=".:${PWD}/antlr-4.5.3-complete.jar:${CLASSPATH}"
+
 grammar:
+	echo "ensure that you have run DOLLAR (make grammarinstall) before this"
 	java -jar ${PWD}/antlr*.jar Grammar.g4
 	javac Grammar*.java
 
 grammarrun:
+	echo "ensure that you have run DOLLAR (make grammarinstall) before this"
 	java org.antlr.v4.gui.TestRig Grammar stat -tree
 
 tool:
