Refactor: remove parser from the skeleton

--- a/skeleton/project.cabal
+++ b/skeleton/project.cabal
@@ -1,4 +1,4 @@
-Name:                Parser
+Name:                Project
 Version:             0.0.1
 Description:         TODO Modify this description
 License:             BSD3
