--- a/pool-balls/project.cabal
+++ b/pool-balls/project.cabal
@@ -1,4 +1,4 @@
-Name:                Project
+Name:                PoolBalls
 Version:             0.0.1
 Description:         TODO Modify this description
 License:             BSD3
