Defect: the name of the project MUST be the parser (i.e., project-specific)

--- a/skeleton/project.cabal
+++ b/skeleton/project.cabal
@@ -1,4 +1,4 @@
-Name:                Project
+Name:                Parser
 Version:             0.0.1
 Description:         TODO Modify this description
 License:             BSD3
